# label-maker-demo

./: .env  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  startup.sh
data/: label_maker.sqlite
label-generation-data/resources/features/: feature_matrix.csv  sample_feature_matrix.csv
label-generation-demo/: .env  .gitignore  Dockerfile  Home.py  Procfile  app.yaml  config.yaml  create-db.py  logging.conf  pyproject.toml  startup.sh
label-generation-demo/model/: model.py  time_series_data.py
label-generation-demo/pages/: 1_Labeling_Results.py  2_Labeling_Task.py  3_Ruleset_Creator.py  4_Rule_Creator.py  5_Labeling.py  6_Time_Series_Analysis.py  7_Additional_Information.py
label-generation-demo/pages/components/: authentication_service.py
label-generation-demo/pages/components/creators/: advanced_rule_creator.py  free_form_rule_creator.py  simple_rule_creator.py
label-generation-demo/pages/components/labeling/: metrics.py  timeseries_rule_list.py
label-generation-demo/pages/components/sidebar/: __init__.py  sidebar_labeling_step_list.py  sidebar_state_component.py
label-generation-demo/services/: dataprovider.py  persistence_service.py
label-generation-demo/services/connectors/: backend_connector.py  database_connector.py
label-generation-demo/services/labeling/: labeler.py  properties.py
label-generation-demo/services/labeling/surrogate_models/: probablistic_logistic_regression_model.py  sk_logistic_regression_model.py  torch_logistic_regression.py  weasel_model.py
label-generation-demo/services/parser/: rule_parser.py
label-generation-demo/util/: __init__.py  session_constants.py  string_convenience.py
label-generation-demo/util/annotations/: benchmark.py  logger.py
label-generation-surrogate-model-backend/: .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml  rpc-backend.py
label-generation-surrogate-model-backend/sm_backend/models/: calls.py  plt_log_reg.py  plt_prob_log_reg.py  surrogate_model.py  t_log_reg.py  weasel_m.py
(+4523 files in other folders)
