[tool.poetry]
name = "sm-backend"
version = "0.1.0"
description = ""
authors = ["Johannes Windischbauer <johannes.windischbauer@dynatrace.com>"]
readme = "README.md"
packages = [{include = "sm_backend"}]

[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"
weasel = {git = "https://github.com/autonlab/weasel"}
pytorch-lightning = "1.7.7"
torch = "^2.1.1"
torchmetrics = "^0.11.4"
pandas = "^2.1.0"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
